--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -79,7 +79,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  row-gap: var(--spacing-md);
+  row-gap: var(--spacing-sm);
   overflow-x: hidden;
   line-height: 1.5em;
 }
